--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	 <link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
 </head>
 <body>
+	<!-- Ok i know i am just lazy -->
     <h1 style="text-align: center;">This web site is under construction</h1>
     <h1 style="text-align: center;"><a href="https://discord.telixz.com">Discord</a></h1>
 </body>
