--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<!-- Ok i know i am just lazy -->
-    <h1 style="text-align: center;">This web site is under construction</h1>
+    <h1 style="text-align: center;">This web site is under construction(I am just lazy)</h1>
     <h1 style="text-align: center;"><a href="https://discord.telixz.com">Discord</a></h1>
 </body>
 </html>
